--- a/templates/forgetpassword.html
+++ b/templates/forgetpassword.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>forgetpassword</title>
     <link rel="stylesheet" type="text/css" href="../static/public.css">
 </head>
 
@@ -125,24 +125,16 @@
             .then(response => response.json())
             .then(data => {
                 console.log(data)
+                console.log(data.data.length)
                 if (data && data.data && Array.isArray(data.data) && data.data.length > 0) {
                     for (let i = 0; i < data.data.length; i++) {
-                        if (data.data[i].id == id) {
-                            if (password === password_agein && password.length >= 6) {
-                                update_password(id, password)
-                                break
-                            }
-                            else {
-                                alert('不一致')
-                                break
-                            }
-                        } else {
-                            alert('帐号错误')
+                        console.log(data.data[i])
+                        if (data.data[i].id == id && password === password_agein && password.length >= 6) {
+                            update_password(id, password)
                             break
                         }
                     }
-                }
-                else {
+                } else {
                     console.log('error')
                 }
             }).catch(error => {
